Change: Z-Index - Logo / Fader / Bg Menu Fixed / Fader / Dropdown

--- a/src/sass/home/home_header.sass
+++ b/src/sass/home/home_header.sass
@@ -86,6 +86,10 @@ header.header-index
 .header-index__hl__img
     height: 100%
     width: 100%
+    
+.header-index__hl__img a
+    height: 100%
+    width: 100%
 
 
 .header-index__hl__img img
