--- a/src/sass/home/home_soon.sass
+++ b/src/sass/home/home_soon.sass
@@ -30,6 +30,10 @@
         height: 54.4rem
         overflow: hidden
 
+.soon-index__coming__img a
+    height: 100%
+    width: 100%
+
 
 .soon-index__coming__img img
     height: 100%
