--- a/src/sass/partials/_dropdown.sass
+++ b/src/sass/partials/_dropdown.sass
@@ -11,12 +11,12 @@
         display: block
         left: 0
         position: fixed
-        top: 4.9rem
+        top: 5rem
         opacity: 0
         transform: translateY(-100%)
         transition: transform .8s cubic-bezier(0, 0.79, 0.2, 1)
         width: 100vw
-        z-index: 6
+        z-index: 8
     
 
 
@@ -105,7 +105,7 @@
     transition: opacity .4s ease-out
     visibility: hidden
     width: 100vw
-    z-index: 6
+    z-index: 2
 
 
 .dd-active
