--- a/src/sass/partials/_menu.sass
+++ b/src/sass/partials/_menu.sass
@@ -15,7 +15,7 @@
     left: 0
     position: fixed
     top: 0
-    z-index: 8
+    z-index: 3
     width: 100vw
     @include desk
         height: 5rem
@@ -28,12 +28,21 @@ a.logo-main
     position: fixed
     top: 20px
     width: 100px
-    z-index: 8
+    z-index: 7
     @include desk
         top: 1.8rem
-        transition: width 0.6s cubic-bezier(0.16, 1.08, 0.38, 0.98)
+        
+        //transition: width 0.8s cubic-bezier(0.16, 1.08, 0.38, 0.98)
+        transition: transform 0.6s cubic-bezier(0.16, 1.08, 0.38, 0.98)
+        //-width: 12.6rem
         width: 12.6rem
-        will-change: width, top
+        will-change: transform
+
+.index  a.logo-main
+    @include desk
+        top: 6.3rem
+        width: 131.7rem
+
 
 a.logo-main svg path, a.logo-main svg polygon
     fill: var(--dark)
@@ -141,6 +150,7 @@ a.trg-search
         left: var(--gap)
         position: fixed
         top: 1.8rem
+        pointer-events: none
 
 
 
@@ -573,7 +583,7 @@ nav.main-menu
 
 .cape-hour
     @include desk
-        display: none
+        opacity: 0
 
 //.is-top-home a.logo-main
 //@include desk
